fixing pre word wrap

--- a/static/main.css
+++ b/static/main.css
@@ -196,8 +196,13 @@ p {
     font-weight: 400;
 }
 
-pre{
-    word-wrap: break-word;
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    
 }
 code {
     font-family: 'Roboto Mono', monospace;
